still haven't fixed the problem - but have cleaned things up
it's returning a hash of objects, but i can't access "abbreviation"
attribute on them.

--- a/app/views/requests/results.html.erb
+++ b/app/views/requests/results.html.erb
@@ -11,9 +11,10 @@
     <th></th>
   </tr>
 
-<% @results.each do |result| %>
+<% @results.each do |result| %> 
   <tr>
-    <%= @results %>
+    <td><%= result.abbreviation %></td>
+    <td><%= result.definition %></td>
   </tr>
 <% end %>
 </table>
