it works. simply.

--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -15,6 +15,7 @@
 <!-- TODO: Put in form -->  
     <%= f.text_area :text %>
     <p>Full text of form here</p>
-    <%= f.submit %>
+    <%= f.submit %>      
+    <p><strong><%= link_to "Find results", results_path(@request) %></strong></p>  
   </div>
 <% end %>
