changed new request form to have a link straight to searching - no idea if it will work!

--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -12,10 +12,7 @@
   <% end %>
 
   <div class="actions">
-<!-- TODO: Put in form -->  
     <%= f.text_area :text %>
-    <p>Full text of form here</p>
-    <%= f.submit %>      
-    <p><strong><%= link_to "Find results", results_path(@request) %></strong></p>  
+    <%= f.submit "Search for acronyms", :disable_with => 'Search for acronymsing...' %>
   </div>
 <% end %>
