--- a/app/views/requests/results.html.erb
+++ b/app/views/requests/results.html.erb
@@ -11,11 +11,11 @@
     <th></th>
   </tr>
 
-<% @results.each do |acronym| %>
+<% @results.each do |result| %>
   <tr>
-    <td><%= acronym.abbreviation %></td>
-    <% debugger %>
-    <td><%= in_place_editor_field :acronym, :definition %></td>
+    <td><%= result.abbreviation %></td>
+    <td><%= on_the_spot_edit result, :definition %></td>
+    
   </tr>
 <% end %>
 </table>
