--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,7 +1,4 @@
 <h1>New request</h1>
 
+<p>Paste your text in the box, and click the button</p>
 <%= render 'form' %>
-
-
-
-<%= link_to 'Back', requests_path %>
