--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div class="container">
+  <div class="content">
 
 <%= yield %>
-
+             </div></div>
 </body>
 </html>
