--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,9 @@
 </head>
 <body>
   <div class="container">
-  <div class="content">
-
-<%= yield %>
-             </div></div>
+    <div class="content well">
+      <%= yield %>
+    </div>
+  </div>
 </body>
 </html>
