--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,4 +1,5 @@
-<h1>New request</h1>
-
-<p>Paste your text in the box, and click the button</p>
+<!-- <div class="page-header">   -->
+  <h1>Generate new table</h1>
+<!-- </div> -->
+<!-- <p>Paste your text into the box, and click the button</p> -->
 <%= render 'form' %>
